--- a/package.json
+++ b/package.json
@@ -11,8 +11,16 @@
       "types": "./dist/index.d.ts"
     },
     "./drizzle": {
-      "import": "./dist/adapters/drizzle.js",
-      "types": "./dist/adapters/drizzle.d.ts"
+      "import": "./dist/adapters/drizzle/index.js",
+      "types": "./dist/adapters/drizzle/index.d.ts"
+    },
+    "./drizzle/pg": {
+      "import": "./dist/adapters/drizzle/pg.js",
+      "types": "./dist/adapters/drizzle/pg.d.ts"
+    },
+    "./drizzle/sqlite": {
+      "import": "./dist/adapters/drizzle/sqlite.js",
+      "types": "./dist/adapters/drizzle/sqlite.d.ts"
     }
   },
   "scripts": {
@@ -34,9 +42,11 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
     "@libsql/client": "0.15.15",
+    "@types/better-sqlite3": "7.6.13",
     "@types/node": "25.0.3",
     "@types/pg": "8.16.0",
     "@vitest/coverage-v8": "4.0.16",
+    "better-sqlite3": "12.5.0",
     "drizzle-kit": "0.31.8",
     "drizzle-orm": "0.45.1",
     "pg": "8.16.3",
@@ -44,5 +54,10 @@
     "uuid": "13.0.0",
     "vitest": "4.0.16"
   },
-  "packageManager": "pnpm@10.18.2+sha512.9fb969fa749b3ade6035e0f109f0b8a60b5d08a1a87fdf72e337da90dcc93336e2280ca4e44f2358a649b83c17959e9993e777c2080879f3801e6f0d999ad3dd"
+  "packageManager": "pnpm@10.18.2+sha512.9fb969fa749b3ade6035e0f109f0b8a60b5d08a1a87fdf72e337da90dcc93336e2280ca4e44f2358a649b83c17959e9993e777c2080879f3801e6f0d999ad3dd",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "better-sqlite3"
+    ]
+  }
 }
