tests: configure vitest paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "exactOptionalPropertyTypes": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
     }
