chore: rename transito to machin

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "transito",
   "version": "0.1.0",
+  "name": "machin",
   "description": "TypeScript state machine library with first-class persistence support",
   "type": "module",
   "main": "./dist/index.js",
