--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
   ],
   "author": "",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Davasny/machin.git"
+  },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
     "@libsql/client": "0.15.15",
