--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,9 @@ jobs:
           node-version: 22
           cache: 'pnpm'
 
+      - name: Update npm to latest
+        run: npm install -g npm@latest
+
       - name: Validate version
         run: node .github/scripts/validate-version.cjs ${{ inputs.version }}
 
