--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Update npm to latest
-        run: npm install -g npm@latest
+        run: npm install -g npm@11.7.0
 
       - name: Validate version
         run: node .github/scripts/validate-version.cjs ${{ inputs.version }}
